objects/gvp__Event_Item__c.object
<CustomObject>
    <fields>
        <fullName>gvp__Cases_on_Display__c</fullName>
        <label># of cases on display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Location__c</fullName>
        <label>Display Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cooler</fullName>
                </value>
                <value>
                    <fullName>Endcap</fullName>
                </value>
                <value>
                    <fullName>In Department</fullName>
                </value>
                <value>
                    <fullName>Front of Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Drinks_Sold__c</fullName>
        <label>Drinks Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Event_Item_Key__c</fullName>
        <externalId>true</externalId>
        <label>Event Item Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Feature_Price__c</fullName>
        <label>Feature Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Label</label>
        <referenceTo>gvp__Label__c</referenceTo>
        <relationshipLabel>Event Items</relationshipLabel>
        <relationshipName>Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Original_Price__c</fullName>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Price_Featured__c</fullName>
        <label>Is price featured?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Promo_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promo Event</label>
        <referenceTo>gvp__Event__c</referenceTo>
        <relationshipLabel>Event Items</relationshipLabel>
        <relationshipName>Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Size</label>
        <referenceTo>gvp__Size__c</referenceTo>
        <relationshipLabel>Event Items</relationshipLabel>
        <relationshipName>Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Units_Sold__c</fullName>
        <label>Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Item</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVTITM-{000000000}</displayFormat>
        <label>Event Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>